--- a/index.html
+++ b/index.html
@@ -5,24 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML/CSS Exam</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img src="/logo.svg" alt="Logo">
-        <nav>
-            <a href="#">Features</a>
-            <a href="#">About</a>
-            <a href="#">Launch</a>
-            <a href="#">Sign Up</a>
-        </nav>
-    </header>
-    <main>
+    <div class="karkasas">
+        <header>
+            <img src="/logo.svg" alt="Logo">
+            <nav>
+                <a href="#">Features</a>
+                <a href="#">About</a>
+                <a href="#">Launch</a>
+                <a href="#">Sign Up</a>
+            </nav>
+        </header>
+        <main>
 
-    </main>
-    <footer>
+        </main>
+        <footer>
 
-    </footer>
+        </footer>
+    </div>
 </body>
 </html>
