Padaryta sekcija su fonu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
             </nav>
         </header>
         <main>
-
+            <section class="signup-container">
+                    <h5>LAUNCHING SOON</h5>
+                    <h1>An NFT like no other</h1>
+                    <p>Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
+                    <button>Sign Up</button>
+                    <img class="item" src="/graphic.png" alt="NFT sample">
+            </section>
+            <section class="section-su-fonu">
+                <h2>Free NFT for early birds</h2>
+                <p>Sign up today and you'll get a free NFT when we launch.</p>
+            </section>
         </main>
         <footer>
 
