--- a/index.html
+++ b/index.html
@@ -28,9 +28,16 @@
                     <button>Sign Up</button>
                     <img class="item" src="/graphic.png" alt="NFT sample">
             </section>
-            <section class="section-su-fonu">
+            <section class="sekcija-su-fonu">
                 <h2>Free NFT for early birds</h2>
                 <p>Sign up today and you'll get a free NFT when we launch.</p>
+            </section>
+            <section class="sekcija-ikonos">
+                <img src="/companies/1.svg" alt="Boomerang logo">
+                <img src="/companies/2.svg" alt="Blimp logo">
+                <img src="/companies/3.svg" alt="qrco logo">
+                <img src="/companies/4.svg" alt="OpenDoor logo">
+                <img src="/companies/5.svg" alt="Droplet logo">
             </section>
         </main>
         <footer>
