Padarytos NFT kortelės

--- a/index.html
+++ b/index.html
@@ -39,6 +39,84 @@
                 <img src="/companies/4.svg" alt="OpenDoor logo">
                 <img src="/companies/5.svg" alt="Droplet logo">
             </section>
+            <section>
+                <h2>LE Super rare Auction</h2>
+                <p>We have released four limited edition NFTs early which can be bid on via <span>OpenSea.</span></p>
+                <div class="nft">
+                    <div class="nft-kortele">
+                        <img src="/ntfs/ntf-1.svg" alt="NFTs">
+                        <div class="nft-duomenys">
+                            <div class="nft-elementas">
+                                <p class="serija">GLOOP SERIES</p>
+                                <p class="bid">TOP BID</p>
+                            </div>
+                            <div class="nft-elementas">
+                                <p class="pavadinimas">Purple Man</p>
+                                <img src="eth.svg" alt="Etherium logo">
+                                <p class="kaina">2.99 ETH</p>
+                            </div>
+                            <div class="nft-elementas">
+                                <p class="numeris">#12983</p>
+                                <p class="dienos">1 day left</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="nft-kortele">
+                        <img src="/ntfs/nft-2.svg" alt="NFTs">
+                        <div class="nft-duomenys">
+                            <div class="nft-elementas">
+                                <p class="serija">GLOOP SERIES</p>
+                                <p class="bid">TOP BID</p>
+                            </div>
+                            <div class="nft-elementas">
+                                <p class="pavadinimas">Purple Man</p>
+                                <img src="eth.svg" alt="Etherium logo">
+                                <p class="kaina">2.99 ETH</p>
+                            </div>
+                            <div class="nft-elementas">
+                                <p class="numeris">#12983</p>
+                                <p class="dienos">1 day left</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="nft-kortele">
+                        <img src="/ntfs/ntf-3.svg" alt="NFTs">
+                        <div class="nft-duomenys">
+                            <div class="nft-elementas">
+                                <p class="serija">GLOOP SERIES</p>
+                                <p class="bid">TOP BID</p>
+                            </div>
+                            <div class="nft-elementas">
+                                <p class="pavadinimas">Purple Man</p>
+                                <img src="eth.svg" alt="Etherium logo">
+                                <p class="kaina">2.99 ETH</p>
+                            </div>
+                            <div class="nft-elementas">
+                                <p class="numeris">#12983</p>
+                                <p class="dienos">1 day left</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="nft-kortele">
+                        <img src="/ntfs/ntf-4.svg" alt="NFTs">
+                        <div class="nft-duomenys">
+                            <div class="nft-elementas">
+                                <p class="serija">GLOOP SERIES</p>
+                                <p class="bid">TOP BID</p>
+                            </div>
+                            <div class="nft-elementas">
+                                <p class="pavadinimas">Purple Man</p>
+                                <img src="eth.svg" alt="Etherium logo">
+                                <p class="kaina">2.99 ETH</p>
+                            </div>
+                            <div class="nft-elementas">
+                                <p class="numeris">#12983</p>
+                                <p class="dienos">1 day left</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
 
