--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML/CSS Exam</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,11 +23,15 @@
         </header>
         <main>
             <section class="signup-container">
-                    <h5>LAUNCHING SOON</h5>
-                    <h1>An NFT like no other</h1>
-                    <p>Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
-                    <button>Sign Up</button>
-                    <img class="item" src="/graphic.png" alt="NFT sample">
+                    <div class="signup-container-elementas">
+                        <h5>LAUNCHING SOON</h5>
+                        <h1>An NFT like no other</h1>
+                        <p>Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
+                        <button>Sign Up</button>
+                    </div>
+                    <div class="signup-container-elementas">
+                        <img class="item" src="/graphic.png" alt="NFT sample">
+                    </div>
             </section>
             <section class="sekcija-su-fonu">
                 <h2>Free NFT for early birds</h2>
@@ -41,7 +46,7 @@
             </section>
             <section>
                 <h2>LE Super rare Auction</h2>
-                <p>We have released four limited edition NFTs early which can be bid on via <span>OpenSea.</span></p>
+                <p>We have released four limited edition NFTs early which can be bid on via <span>OpenSea</span>.</p>
                 <div class="nft">
                     <div class="nft-kortele">
                         <img src="/ntfs/ntf-1.svg" alt="NFTs">
@@ -117,9 +122,20 @@
                     </div>
                 </div>
             </section>
+            <section class="signup-container">
+                <div class="signup-container-elementas">
+                    <h5>LAUNCHING SOON</h5>
+                    <h2>An NFT like no other</h2>
+                    <p>Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
+                    <button>Sign Up</button>
+                </div>
+                <div class="signup-container-elementas">
+                    <img id="nft-foto" src="/upsell-footer-image.svg" alt="NFT sample">
+                </div>
+        </section>
         </main>
         <footer>
-
+            
         </footer>
     </div>
 </body>
