--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML/CSS Exam</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&display=swap">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -135,7 +135,54 @@
         </section>
         </main>
         <footer>
-            
+            <div class="footer-karkasas">
+                <div class="footer-logo-ikonos">
+                    <img src="/logo.svg" alt="Logo">
+                    <p>Exclusive NFT Collection</p>
+                    <nav class="footer-ikonos">
+                        <a href="#" class="bi-facebook"></a>
+                        <a href="#" class="bi-twitter"></a>
+                        <a href="#" class="bi-instagram"></a>
+                        <a href="#" class="bi-tiktok fa-lg"></a>
+                    </nav>
+                </div>
+                <div class="footer-nuorodos">
+                    <div>
+                        <h5>ABOUT</h5>
+                        <nav class="footer-nuorodos-elementas">
+                            <a href="#">About</a>
+                            <a href="#">Terms</a>
+                            <a href="#">Legal</a>
+                        </nav>
+                    </div>
+                    <div>
+                        <h5>NFT</h5>
+                        <nav class="footer-nuorodos-elementas">
+                            <a href="#">OpenSea</a>
+                            <a href="#">Maker</a>
+                            <a href="#">Learn</a>
+                        </nav>
+                    </div>
+                    <div>
+                        <h5>CONTACT</h5>
+                        <nav class="footer-nuorodos-elementas">
+                            <a href="#">Press</a>
+                            <a href="#">Support</a>
+                        </nav>
+                    </div>
+                    <div>
+                        <h5>SOCIAL</h5>
+                        <nav class="footer-nuorodos-elementas">
+                            <a href="#">Twitter</a>
+                            <a href="#">Instagram</a>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-apatine-juosta">
+                <div><p>© Copyright 2022 NFTlanding</p></div>
+                <div><p>Launching August 2022</p></div>
+            </div>
         </footer>
     </div>
 </body>
