Padaryta "Mobile" adaptacija

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <a href="#">Launch</a>
                 <a href="#">Sign Up</a>
             </nav>
+            <a id="list" href="#" class="bi-list"></a>
         </header>
         <main>
             <section class="signup-container">
@@ -30,7 +31,7 @@
                         <button>Sign Up</button>
                     </div>
                     <div class="signup-container-elementas">
-                        <img class="item" src="/graphic.png" alt="NFT sample">
+                        <img class="item" src="/graphic.svg" alt="NFT sample">
                     </div>
             </section>
             <section class="sekcija-su-fonu">
